--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -60,8 +60,11 @@ nav > button {
 }
 
 @media (max-width: 600px) {
+    nav > button{
+        bottom: -29px;
+    }
     .nav {
-        background-color: #1E1E1E;
+        background-color: #683FD0;
     }
   .nav.active {
     transform: translateX(-50%) translateY(-93px);
